2014-03-24  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/nvti.c, base/nvti.h (nvti_add_sign_key_id): Remove unused
	function.

	* nasl/nasl_signature.c, nasl/nasl_signature.h
	(nasl_extract_signature_fprs): Remove unused function.

2014-03-21  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/network.c (struct ovas_scanner_context_s): Add element for
	gnutls priority string.
	(ovas_scanner_context_new): Add function parameter for priority string.
	Adjust allocation.
	(ovas_scanner_context_attach): Remove priority parameter. Use the value
	from the context instead.
	(ovas_scanner_context_free): Adjust to free priority element.

	* misc/network.h: Adjust function prototypes.

2014-03-20  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Add ability to specify a gnutls priority for a scanner context.

	* misc/network.c (ovas_scanner_context_attach)
	(openvas_register_connection): Add priority parameter Set the openvas
	connection's transport value according to the specified encaps value.
	Adjust set_gnutls_protocol call.
	(read_stream_connection_unbuffered, write_stream_connection4)
	(get_encaps_through): Handle OPENVAS_ENCAPS_TLScustom case.
	(pid_notice): Remove function.
	(set_gnutls_protocol, open_SSL_connection, open_socket): Delete calls to
	removed function.

	* misc/network.h: Adjust ovas_scanner_context_attach prototype.

	* nasl/nasl_socket.c (nasl_open_privileged_socket): Adjust
	openvas_register_connection.

2014-03-15  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/otp.h: Removed.

	* misc/CMakeLists.txt, COPYING: Removed otp.h accordingly.

2014-03-13  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Remove unused misc/rand and base/certificate. Replace nasl_memmem and
	nasl_strndup.

	* COPYING: Remove misc/rand.[c|h] and base/certificate.[c|h} license.

	* base/CMakeLists.txt: base/certificate.[c|h] from build process.

	* misc/CMakeLists.txt: Remove misc/rand.[c|h] from build process.
